--- a/backend_p12/alembic.ini
+++ b/backend_p12/alembic.ini
@@ -84,7 +84,9 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = placeholder
+# the URL to connect to the database.
+# This will be set programmatically in env.py from environment variables
+sqlalchemy.url = postgresql+psycopg://user:pass@localhost/dbname
 
 
 [post_write_hooks]
