--- a/backend_p12/requirements.txt
+++ b/backend_p12/requirements.txt
@@ -1,12 +1,11 @@
-# Project Tinder Backend - Requirements for Pages 1 & 2
+# Ques Backend - Enhanced Requirements v2.0
 # Install: pip install -r requirements.txt
-# Deploy: scp -r ~/Desktop/backend_p12 ubuntu@YOUR_CVM_IP:/home/ubuntu/
 
 # Core FastAPI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
-# Data validation  
+# Data validation and configuration  
 pydantic>=2.9.0
 
 # HTTP requests for external APIs
@@ -16,7 +15,7 @@ requests==2.31.0
 python-dotenv==1.0.0
 
 # PostgreSQL database - psycopg3 for Python 3.13 compatibility
-psycopg[binary]==3.1.8
+psycopg[binary]>=3.1.8
 sqlalchemy>=2.0.25
 
 # Database migrations
@@ -31,12 +30,36 @@ passlib[bcrypt]==1.7.4
 # Email validation for Pydantic EmailStr
 email-validator==2.0.0
 
-# Rate limiting (optional but recommended)
-slowapi==0.1.9
+# Enhanced security and validation
+cryptography>=41.0.0
 
-# Vector embeddings (optional - for local query embedding)
+# Monitoring and logging
+structlog>=23.0.0
+
+# Redis for caching and sessions (optional)
+redis>=5.0.0
+hiredis>=2.3.0
+
+# Vector embeddings and AI
 sentence-transformers>=2.7.0
 huggingface_hub>=0.19.0
+numpy>=1.24.0
 
-# Tencent Cloud Vector Database (optional)
+# Tencent Cloud Services
 tcvectordb
+tencentcloud-sdk-python>=3.0.1000
+
+# Development and testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+httpx>=0.25.0
+factory-boy>=3.3.0
+
+# Code quality
+black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
+mypy>=1.5.0
+
+# Performance monitoring
+psutil>=5.9.0
