--- a/backend_merged/requirements.txt
+++ b/backend_merged/requirements.txt
@@ -2,6 +2,10 @@
 # Combines dependencies from both backend_p12 and backend_p34
 # Install: pip install -r requirements.txt
 
+# ⚠️ EXTERNAL API DEPENDENCIES REQUIRED FOR PROJECT IDEAS ⭐ NEW
+# - SearchAPI key (SEARCHAPI_KEY): https://www.searchapi.io/
+# - DeepSeek API key (DEEPSEEK_API_KEY_AGENT): https://api.deepseek.com/
+
 # Core FastAPI Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
@@ -17,6 +21,10 @@ email-validator>=2.0.0
 requests==2.31.0
 aiohttp==3.8.6
 httpx==0.25.0
+
+# Web scraping and content extraction (Project Idea Agent) ⭐ NEW
+crawl4ai==0.2.77
+beautifulsoup4==4.12.2
 
 # Environment variables
 python-dotenv==1.0.0
@@ -67,10 +75,18 @@ transformers>=4.30.0
 tcvectordb
 tencentcloud-sdk-python>=3.0.1000
 
-# DeepSeek API for tag extraction
-openai>=1.0.0  # Compatible API client
+# DeepSeek API for tag extraction and project idea generation ⭐ NEW
+openai>=1.0.0  # Compatible API client for DeepSeek API
 
-# JSON parsing and text processing
+# Project Idea Agent Dependencies ⭐ NEW
+# Web search and content extraction
+requests==2.31.0
+httpx==0.25.0
+aiohttp==3.8.6
+
+# Web scraping (required for project idea agent)
+crawl4ai==0.2.77
+beautifulsoup4==4.12.2
 jsonschema>=4.0.0
 
 # WebSocket support for real-time features
