--- a/backend_merged/requirements.txt
+++ b/backend_merged/requirements.txt
@@ -23,7 +23,9 @@ aiohttp==3.8.6
 httpx==0.25.0
 
 # Web scraping and content extraction (Project Idea Agent) ⭐ NEW
-crawl4ai==0.2.77
+# NOTE: crawl4ai is optional. Code falls back to requests-based scraping if unavailable.
+# Pin to an available version range to avoid installation failure.
+crawl4ai>=0.3.0,<0.8.0
 beautifulsoup4==4.12.2
 
 # Environment variables
@@ -85,7 +87,8 @@ httpx==0.25.0
 aiohttp==3.8.6
 
 # Web scraping (required for project idea agent)
-crawl4ai==0.2.77
+# NOTE: keep version range consistent with above occurrence
+crawl4ai>=0.3.0,<0.8.0
 beautifulsoup4==4.12.2
 jsonschema>=4.0.0
 
