--- a/Ques_Frontend/package.json
+++ b/Ques_Frontend/package.json
@@ -29,12 +29,14 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@types/matter-js": "^0.20.2",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
+            "matter-js": "^0.20.0",
             "motion": "*",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
